--- a/index.html
+++ b/index.html
@@ -19,17 +19,14 @@
 
   <h2>Contact</h2>
   <p class="email">
-    <!-- IMPORTANT: email wrapped to prevent CloudFlare obfuscation -->
-    <a href="mailto:24f1000637@ds.study.iitm.ac.in">
-      24f1000637@ds.study.iitm.ac.in
-    </a>
+    <!--email_off-->24f1000637@ds.study.iitm.ac.in<!--/email_off-->
   </p>
 
   <h2>Projects</h2>
   <ul>
     <li>Data Analysis with Python</li>
     <li>Machine Learning Models</li>
-    <li>Web Development Projects</li>
+    <li>Statistical Computing</li>
   </ul>
 </body>
 </html>
